--- a/public/contact.html
+++ b/public/contact.html
@@ -192,7 +192,7 @@
 
 <body>
   <div class="container">
-    <img src="https://media.licdn.com/dms/image/v2/D5603AQFtoKWlJRPdKw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1706869125805?e=1748476800&v=beta&t=rF9ErFlhL2QJewr_wz2sj5_nvKmgash2IlGFhXKTcQU" />
+    <img class="avatar"src="https://media.licdn.com/dms/image/v2/D5603AQFtoKWlJRPdKw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1706869125805?e=1748476800&v=beta&t=rF9ErFlhL2QJewr_wz2sj5_nvKmgash2IlGFhXKTcQU" />
     <h1>Mritunjay Thakur but call me Jay</h1>
     <h2>Contact Me</h2>
     <p class="contact-info">📧 Email: Mritunjaythakur903@gmail.com</p>
@@ -200,6 +200,7 @@
     <div class="social-links">
       <a href="https://www.instagram.com/___jaythakur___" target="_blank">Instagram</a>
       <a href="https://www.linkedin.com/in/mritunjay-thakur-jay/" target="_blank">LinkedIn</a>
+      <a href="https://github.com/mritunjay-thakur/" target="_blank">GitHub</a>
     </div>
     <button class="glow-on-hover" onclick="window.location.href='index.html'">Back to Home</button>
   </div>
